Don't printf time_t with %d; fixes PR 44128 from yamt. With this change it successfully prints mtimes after 2038.